<resources>
    <string name="app_name">Ride a bike</string>
    <string name="save">Save</string>
    <string name="end">Stop</string>
    <string name="date">dd.mm.yyyy</string>
    <string name="speed">SPEED</string>
    <string name="Km">DISTANCE</string>
    <string name="start">Start</string>
    <string name="time">DURATION</string>
    <string name="showdate">DATE:</string>
    <string name="textAverage">AVERAGE</string>
    <string name="averageSpeed">0.00</string>
    <string name="Speed">0.00</string>
    <string name="km">0.00</string>
    <string name="Time">0:00:00</string>
    <string name="Textcalories">CALORIES</string>
    <string name="calories">00</string>
    <string name="temp">00°c</string>
    <string name="TextMaxSpeed">MAX SPEED</string>
    <string name="MaxSpeed">0.00</string>
    <string name="clock">CLOCK</string>
    <string name="km_h">Km/h</string>
    <string name="Textkm">km</string>
    <string name="h">h</string>
    <string name="routes">Routes history</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="TextEmptyList">Your list routes is empty!</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="age">Age (god)</string>
    <string name="weight">Weight (kg)</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="town">Town</string>

</resources>
